--- a/package.json
+++ b/package.json
@@ -18,12 +18,18 @@
   "homepage": "https://github.com/Lopez42512/What2Eat#readme",
   "dependencies": {
     "axios": "^0.19.0",
+    "bcrypt-nodejs": "0.0.3",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "config.json": "0.0.4",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
+    "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
-    "sequelize": "^5.8.7",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "sequelize": "^5.10.2",
     "sequelize-cli": "^5.4.0"
   }
 }
