--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Lopez42512/What2Eat#readme",
   "dependencies": {
+    "ajax-request": "^1.2.3",
     "axios": "^0.19.0",
     "bcrypt-nodejs": "0.0.3",
     "bcryptjs": "^2.4.3",
@@ -33,3 +34,4 @@
     "sequelize-cli": "^5.4.0"
   }
 }
+
